토큰화 공백기준으로 변경