@@ -2,15 +2,12 @@ package com.waterfogsw.tokenizer;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StringTokenizer implements Tokenizer {
-    private final String regex = "(?<=[^\\d])(?=\\d)|(?=[^\\d])";
+    private final String SPLIT_REGEX = " ";
 
     @Override
-    public List<String> tokenize(String exprStr) {
-        return Arrays.stream(exprStr.split(regex))
-                .filter((token) -> !token.equals(" "))
-                .collect(Collectors.toList());
+    public List<String> tokenize(String stringFormula) {
+        return Arrays.stream(stringFormula.split(SPLIT_REGEX)).toList();
     }
 }
